<resources>
    <string name="app_name">LiveWallpaperIt</string>
    <string name="settings_name">LWIt settings</string>
    <string name="sources_name">Subreddits</string>
    <string name="subreddit_name">r/%s</string>
    <string name="sources_summary">Update subreddits and filters</string>
    <string name="favorite_title">Favorite images</string>
    <string name="favorite_name">Favorites</string>
    <string name="favorite_summary">View favorite images</string>

    <string name="name_art_provider">LWIt art</string>
    <string name="desc_art_provider">LiveWallpaperIt art provider</string>
    <string name="label_client_id">Client ID or App ID</string>
    <string name="btn_ok">Activate Muzei source</string>
    <string name="btn_verify">Verify authentication</string>
    <string name="btn_show_api">Use API key</string>
    <string name="btn_hide_api">Disable API key</string>
    <string name="error_clientId_verify">Authentication failed</string>
    <string name="toast_enable">Select TWIt art in Muzei</string>
    <string name="toast_enable_source">Select TWIt art from the list of Sources in Muzei</string>
    <string name="toast_muzei_missing_error">You must install Muzei to use this Source</string>
    <string name="toast_play_store_missing_error">Could not install Muzei from the Google Play Store</string>
    <string name="app_version">Version %s</string>
    <string name="app_version_summary">%1$s - %2$s</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="btn_edit_source">Edit sources</string>
    <string name="action_add">Add subreddit</string>
    <string name="action_refresh_all">Refresh all</string>
    <string name="action_refresh_subreddit">Refresh subreddit</string>
    <string name="action_reload">Reload subreddit</string>
    <string name="button_remove_subreddit_tooltip">Remove subreddit</string>
    <string name="button_ignore_submission_tooltip">Remove submission images</string>
    <string name="confirm_remove_subreddit">Remove subreddit %s?</string>
    <string name="confirm_remove_subreddit_description">%s and all associated filters will be removed. Are you sure?</string>
    <string name="confirm_remove_submission">Delete and ignore images?</string>
    <string name="confirm_remove_submission_description">All images from `%s` will be removed and added to the ignore list. Are you sure?</string>

    <string name="action_settings">Settings</string>
    <string name="title_add_subreddit">Add image source</string>
    <string name="hint_add_subreddit">subreddit name</string>
    <string name="action_share_link">Share link</string>
    <string name="action_share_description">Share name and link</string>
    <string name="action_share_image">Share image</string>
    <string name="action_share_image_description">Share image file</string>
    <string name="action_delete">Remove</string>
    <string name="action_delete_description">Remove and add to ignore list</string>
    <string name="share_title_and_link">My Android wallpaper today is \'%1$s\' from reddit.com by %2$s.\n\n%3$s</string>
    <string name="title_and_link">\'%1$s\' from reddit.com by %2$s.\n\n%3$s</string>
    <string name="label_upvote_percent">minimum upvote percentage</string>
    <string name="label_min_comments">minimum comment count</string>
    <string name="label_min_score">minimum score</string>
    <string name="allow_nsfw">Allow NSFW</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_summary">Delete downloaded artworks</string>
    <string name="button_preview_tooltip">View cached subreddit</string>
    <string name="button_open_subreddit_tooltip">Open subreddit</string>
    <string name="button_open_submission_tooltip">Open submission</string>
    <plurals name="artwork_count">
        <item quantity="one">%d artwork</item>
        <item quantity="other">%d artworks</item>
    </plurals>
    <string name="thumbnail_width">%d px</string>

    <string name="nsfw_tooltip">not safe for work</string>
    <string name="upvote_ratio_tooltip">upvote ratio</string>
    <string name="score_tooltip">score</string>
    <string name="num_comments_tooltip">comment count</string>
    <string name="loading_sources">Loading sources</string>
    <string name="refresh_sources">Refresh sources</string>
    <string name="empty_sources">You have not added any subreddits.</string>
    <string name="loading_subreddit">Loading subreddit submissions</string>
    <string name="refreshing_subreddit">Loading from Reddit</string>
    <string name="filter_invalid">Does not pass filter criteria</string>

    <string name="set_favorite">Set favorite</string>
    <string name="unset_favorite">Remove favorite</string>
    <string name="ignore_and_remove">Ignore and remove</string>
    <string name="clear_ignore">Don\'t ignore</string>
    <string name="empty_favorite">No favorite images</string>
    <string name="loading_favorite">Loading favorite images</string>
</resources>
