<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:key="preferences-root"
    android:title="@string/settings_name"
    tools:showIn="@layout/activity_settings">

    <Preference
        android:summary="@string/sources_summary"
        android:title="@string/sources_name">
        <intent
            android:targetClass="rocks.tbog.livewallpaperit.preview.SourcesActivity"
            android:targetPackage="rocks.tbog.livewallpaperit" />
    </Preference>

    <rocks.tbog.livewallpaperit.preference.CustomDialogPreference
        android:defaultValue="5"
        android:dialogLayout="@layout/number_picker"
        android:key="desired-artwork-count"
        android:title="Images from each source" />

    <rocks.tbog.livewallpaperit.preference.CustomDialogPreference
        android:defaultValue="108"
        android:dialogLayout="@layout/number_picker"
        android:key="image-thumbnail-width"
        android:title="Thumbnail width" />

    <rocks.tbog.livewallpaperit.preference.BroadcastPreference
        android:summary="@string/clear_cache_summary"
        android:title="@string/clear_cache">
        <intent
            android:targetClass="rocks.tbog.livewallpaperit.DeleteArtworkReceiver"
            android:targetPackage="rocks.tbog.livewallpaperit">
            <extra
                android:name="delete.artwork.action"
                android:value="clear_cache" />
        </intent>
    </rocks.tbog.livewallpaperit.preference.BroadcastPreference>

    <SwitchPreference
        android:defaultValue="false"
        android:key="allow-nsfw"
        android:title="@string/allow_nsfw" />

    <Preference
        android:key="rate-app"
        android:title="@string/rate_the_app">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="market://details?id=rocks.tbog.tblauncher" />
    </Preference>

    <Preference
        android:key="privacy-policy"
        android:title="@string/privacy_policy">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://tbog.github.io/live-wallpaper-it/Privacy-Policy" />
    </Preference>

    <Preference
        android:enabled="false"
        android:key="app-version"
        android:summary="@string/app_version_summary"
        android:title="@string/app_version">
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://tbog.github.io/live-wallpaper-it" />
    </Preference>

</androidx.preference.PreferenceScreen>
