<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_sources">

    <TextView
        android:id="@+id/submission_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:maxLines="6"
        android:singleLine="false"
        tools:text="@tools:sample/full_names" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_open"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_open_submission_tooltip"
        android:tooltipText="@string/button_open_submission_tooltip"
        app:icon="@drawable/ic_open_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_remove"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_remove_submission_tooltip"
        android:tooltipText="@string/button_remove_submission_tooltip"
        app:icon="@drawable/ic_remove_48" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/button_title_flow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginVertical="@dimen/margin"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:constraint_referenced_ids="submission_title,button_open,button_remove"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/image_carousel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:contentDescription="image carousel"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_title_flow"
        tools:listitem="@layout/image_carousel_item" />

    <ImageView
        android:id="@+id/nsfw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:contentDescription="@string/nsfw_tooltip"
        android:src="@drawable/ic_nsfw_24"
        android:tooltipText="@string/nsfw_tooltip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_carousel"
        app:tint="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/upvote_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:gravity="center_vertical"
        android:tooltipText="@string/upvote_ratio_tooltip"
        app:drawableEndCompat="@drawable/ic_percent_24"
        app:drawableTint="?android:attr/textColorSecondary"
        app:layout_constraintStart_toEndOf="@id/nsfw"
        app:layout_constraintTop_toTopOf="@id/nsfw"
        app:layout_goneMarginBottom="@dimen/margin"
        app:layout_goneMarginStart="@dimen/margin"
        app:layout_goneMarginTop="@dimen/margin"
        tools:text="@tools:sample/us_zipcodes" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:gravity="center_vertical"
        android:tooltipText="@string/score_tooltip"
        app:layout_constraintBottom_toBottomOf="@id/upvote_ratio"
        app:layout_constraintStart_toEndOf="@id/upvote_ratio"
        app:layout_constraintTop_toTopOf="@id/upvote_ratio"
        tools:text="@tools:sample/us_zipcodes" />

    <TextView
        android:id="@+id/num_comments"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="12dp"
        android:gravity="center_vertical"
        android:tooltipText="@string/num_comments_tooltip"
        app:drawableStartCompat="@drawable/ic_comment_24"
        app:drawableTint="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toBottomOf="@id/upvote_ratio"
        app:layout_constraintStart_toEndOf="@id/score"
        app:layout_constraintTop_toTopOf="@id/upvote_ratio"
        tools:text="@tools:sample/us_zipcodes" />

    <ImageView
        android:id="@+id/valid_invalid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        app:layout_constraintBottom_toBottomOf="@id/upvote_ratio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/upvote_ratio"
        app:srcCompat="@drawable/ic_validated_24"
        tools:srcCompat="@drawable/ic_invalid_24" />

</androidx.constraintlayout.widget.ConstraintLayout>
