<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/toggle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:checked="true"
        app:layout_constraintBottom_toTopOf="@id/barrier_top"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth="wrap_content" />

    <TextView
        android:id="@+id/subreddit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/barrier_top"
        app:layout_constraintEnd_toStartOf="@id/button_title_flow"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@id/toggle"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/cities" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/button_title_flow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:constraint_referenced_ids="button_preview,button_open,button_remove"
        app:flow_horizontalBias="1"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintBottom_toTopOf="@id/barrier_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/subreddit_name"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_preview"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_preview_tooltip"
        android:tooltipText="@string/button_preview_tooltip"
        app:icon="@drawable/ic_preview_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_open"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_open_subreddit_tooltip"
        android:tooltipText="@string/button_open_subreddit_tooltip"
        app:icon="@drawable/ic_open_24" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_remove"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_remove_subreddit_tooltip"
        android:tooltipText="@string/button_remove_subreddit_tooltip"
        app:icon="@drawable/ic_remove_48" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="toggle,subreddit_name,button_title_flow" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_min_upvote_percent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/label_upvote_percent"
        android:gravity="start|center_vertical"
        android:tooltipText="@string/label_upvote_percent"
        app:icon="@drawable/ic_percent_24"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintWidth="wrap_content"
        tools:text="@tools:sample/us_zipcodes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_min_score"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/label_min_score"
        android:gravity="start|center_vertical"
        android:tooltipText="@string/label_min_score"
        app:icon="@drawable/ic_star_24"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintWidth="wrap_content"
        tools:text="@tools:sample/us_zipcodes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_min_comments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/label_min_comments"
        android:gravity="start|center_vertical"
        android:tooltipText="@string/label_min_comments"
        app:icon="@drawable/ic_comment_24"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintWidth="wrap_content"
        tools:text="@tools:sample/us_zipcodes" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/filter_submission_flow"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:orientation="horizontal"
        app:constraint_referenced_ids="button_min_upvote_percent,button_min_score,button_min_comments"
        app:flow_horizontalGap="@dimen/margin"
        app:flow_horizontalStyle="packed"
        app:flow_wrapMode="chain"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_top"
        app:layout_constraintWidth="match_parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrap_img_min_width"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:hint="min width"
        android:labelFor="@id/img_min_width"
        app:layout_constraintEnd_toStartOf="@id/wrap_img_min_height"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_submission_flow">

        <AutoCompleteTextView
            android:id="@+id/img_min_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:text="@tools:sample/us_zipcodes" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrap_img_min_height"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:hint="min height"
        android:labelFor="@id/img_min_height"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintStart_toEndOf="@id/wrap_img_min_width"
        app:layout_constraintTop_toBottomOf="@id/filter_submission_flow">

        <AutoCompleteTextView
            android:id="@+id/img_min_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            tools:text="@tools:sample/us_zipcodes" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wrap_img_orientation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin"
        android:hint="orientation"
        android:labelFor="@id/img_min_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wrap_img_min_width">

        <AutoCompleteTextView
            android:id="@+id/img_orientation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            tools:text="@string/image_orientation_portrait" />

    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
